<resources>
    <string name="app_name">Tripiano</string>
    <string name="facebook_app_id">162304051233635</string>
    <string name="fb_login_protocol_scheme">fb162304051233635</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="TestDataBase">TestDB</string>
    <string name="savelocal">SaveLocal</string>
    <string name="loadlocal">LoadLocal</string>
    <string name="SaveFireBase">SaveFireBase</string>
    <string name="loadfirebase">LoadFireBase</string>
    <string name="Alarm">Alarm</string>
    <string name="TestAlarm">TestAlarm</string>
    <string name="ok">Ok</string>

    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="Register">Register</string>
    <string name="loginme">Login Me</string>
    <string name="signup">Signup</string>
    <string name="signout">SignOut</string>

    <string name="hello_blank_fragment">upcoming trips fragment</string>
    <string name="trips_history_fragment">History Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="btn_start_trip">Start</string>
    <string name="btn_cancel_trip">Cancel</string>
    <string name="btn_notes_trip">Notes</string>

    <string name="start">Start Point</string>
    <string name="end">End Point</string>
    <string name="go">Navigate To Trip</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add">Add Trip</string>
    <string name="editTrip">Edit Trip</string>
    <string name="date">Select Trip Date</string>
    <string name="date2">Date</string>
    <string name="set_time">Set Time..</string>
    <string name="time">Time</string>
    <string name="ttipname">Trip Name</string>
    <string name="addTrip">Add Trip</string>
    <string name="tripTypeText">Select Trip Type</string>
    <string name="tripDate"> Trip Date</string>
    <string name="tripTime"> Trip Time</string>
    <string name="from">From </string>
    <string name="to">To </string>
    <string name="repeat"> Repeat Trip?</string>
    <string name="daily">Daily </string>
    <string name="weekly">Weekly </string>
    <string name="monthly">Monthly </string>
    <string name="edit">Edit </string>
    <string name="trip_name">Enter Trip Name Here..</string>
    <string name="set_date">Set Date..</string>
    <string name="datetext">Return Trip Date </string>
    <string name="timetext">Return Trip Time </string>
    <string name="tripType">Trip Type </string>
    <string name="savedata"> Save</string>
    <string name="tolist">Add Note</string>
    <string name="noteText">Add Notes To Your Trip </string>
    <string name="mainTrips">MainTrips</string>
    <string name="btn_detail">Details</string>
    <string name="edit_trip">Edit</string>
    <string name="delete_trip">Delete</string>

    <string name="upcoming">Upcoming</string>
    <string name="done">Done</string>
    <string name="canceled">Canceled</string>
    <string name="choose">Choose Image</string>
    <string name="trip_date">date</string>
    <string name="trip_time">Time</string>
    <string name="trip_state">State</string>
    <string name="trip_details_title">Trip Details</string>
    <string name="close_notes">Save</string>
    <string name="trip_from">From</string>
    <string name="trip_to">To</string>
    <string name="default_home">This screen is meant to view your up-coming trips</string>
    <string name="donothaveaccount">Don\'t have account?</string>
    <string name="Alredyhaveaccount">Already have account?</string>
    <string name="add_trip">Add Trip</string>
    <string name="set_return_time">Select Return Time</string>
    <string name="set_return_date">Select Return Date</string>
    <string name="up_comming">Up Comming Tripss</string>
    <string name="canceled_trips">Done Trips</string>
    <!-- Strings related to Settings -->
</resources>
