<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hazem.facebooklogin.views.TripDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/trip_details_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/trip_details_title"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/route_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trip_details_title" />

            <TextView
                android:id="@+id/trip_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_image" />


            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:weightSum="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trip_title">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/trip_date"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"/>

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_layout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:text="@string/trip_time"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"/>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/from_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_layout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/from"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"/>

                <TextView
                    android:id="@+id/from_text"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/to_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/from_layout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:text="@string/to"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"/>

                <TextView
                    android:id="@+id/to_text"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/state_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/to_layout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/trip_state"
                    android:drawableLeft="@drawable/ic_assignment_black_24dp"/>

                <TextView
                    android:id="@+id/state_text"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_buttons_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="100dp"
                android:weightSum="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/state_layout">

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style_detail"
                    android:text="@string/btn_start_trip" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style_detail"
                    android:text="@string/btn_cancel_trip" />

                <Button
                    android:id="@+id/btn_notes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style_detail"
                    android:text="@string/btn_notes_trip" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style_detail"
                    android:text="@string/edit_trip" />

                <Button
                    android:id="@+id/btn_delete_details"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/button_style_detail"
                    android:text="@string/delete_trip" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</FrameLayout>
